updated readme, css, index, and functions

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         <section class="score-panel">
         	<ul class="stars">
+        	<!-- 	<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star"></i></li> -->
         	</ul>
 
         	<span class="moves">3</span> Moves
@@ -33,7 +33,7 @@
         	</div>
         </section>
 
-        <ul id="deck">
+        <ul class="deck" id="deck">
         </ul>
     </div>
 
