--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         		<li><i class="fa fa-star"></i></li> -->
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves"></span> Moves
 
             <div class="restart" id="restart">
         		<i class="fa fa-repeat"></i>
