added modal windows for beginning and end game

--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
         <ul class="deck" id="deck">
         </ul>
     </div>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="you-won">
+        <span class="close">&times;</span>
+        <p>Congragulations! You Won!</p>
+        <p class="rating"></p>
+        <span class="restart play">RESTART/PLAYAGAIN</span>
+      </div>
+
+    </div>
+    <div class="modal2">
+           <!-- Modal content -->
+      <div class="new-game">
+        <span class="close">&times;</span>
+        <p>Welcome!</p>
+        <p class="info">The game board consists of sixteen "cards" arranged in a grid. The deck is made up of eight different pairs of cards, each with different symbols on one side. The cards are arranged randomly on the grid with the symbol face down. The gameplay rules are very simple: flip over two hidden cards at a time to locate the ones that match!</p>
+        <span class="restart play">PLAY</span>
+      </div>
+    </div>
 
     <script src="js/app.js"></script>
 </body>
