--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         		<li><i class="fa fa-star"></i></li> -->
         	</ul>
 
-        	<span class="moves"></span> Moves
+        Moves <span class="moves"></span> |
+        Time <span class="time"></span> seconds
 
             <div class="restart" id="restart">
         		<i class="fa fa-repeat"></i>
